--- a/app/src/main/res/layout/activity_penalty.xml
+++ b/app/src/main/res/layout/activity_penalty.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/back_ground_color"
     android:orientation="vertical">
 
     <LinearLayout
@@ -148,7 +148,7 @@
                     android:id="@+id/penalty_application"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/main_button"
+                    android:background="@drawable/shape_main_button"
                     android:minWidth="0dp"
                     android:minHeight="0dp"
                     android:onClick="onClick"
@@ -175,7 +175,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:background="@drawable/main_button"
+            android:background="@drawable/shape_main_button"
             android:minWidth="0dp"
             android:minHeight="0dp"
             android:onClick="onClick"
@@ -190,7 +190,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="20dp"
-            android:background="@drawable/main_button"
+            android:background="@drawable/shape_main_button"
             android:minWidth="0dp"
             android:minHeight="0dp"
             android:onClick="onClick"
